# backup_cur

./: README.md
projs/: .env  .gitignore  Errors.py  Makefile  README.md  a.out  config.sh  file_test.txt  ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py  ft_split.c  ft_strlcat.c  ft_strlcpy.c  gen.c  get_next_line.c  get_next_line.h  get_next_line_utils.c  header.h  main.c  main.py  makefile  pyproject.toml  test.c  tt
projs/alchemy/: __init__.py  potions.py
projs/backup/: LLM_wrapper.py
projs/bon/: get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils_bonus.c
projs/call_me_maybe/: pyproject.toml
projs/checker/: get_line.c  get_line.h  get_line_utils.c  main.c
projs/ex0/: Card.py  CreatureCard.py  construct.py  ft_ancient_text.py  ft_command_quest.py  ft_first_exception.py  ft_garden_intro.py  lambda_spells.py  main.py  space_station.py  stream_processor.py
projs/ex00/: give_bmi.py
projs/ex1/: ArtifactCard.py  Deck.py  SpellCard.py  alien_contact.py  data_stream.py  ft_archive_creation.py  ft_different_errors.py  ft_garden_data.py  ft_plot_area.py  ft_score_analytics.py  higher_magic.py  loading.py  main.py  pyproject.toml  requirements.txt  test.py
projs/ex2/: .env  .env.example  Combatable.py  EliteCard.py  Magical.py  __init__.py  ft_coordinate_system.py  ft_custom_errors.py  ft_harvest_total.py  ft_plant_growth.py  ft_stream_managment.py  main.py  nexus_pipeline.py  oracle.py  scope_mysteries.py  space_crew.py
projs/ex3/: AggressiveStrategy.py  CardFactory.py  CardTypes.py  GameEngine.py  (+10 more)
(+318 files in other folders)
