[project]
name = "projs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.5",
    "pydantic>=2.13.4",
    "torch>=2.12.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.20.0",
    "mypy>=2.1.0",
    "flake8>=7.3.0",
]
